--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: sukumar886@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
  Keep calm and follow.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://sukumar.me" # the base hostname & protocol for your site
 
 twitter_username: sukumargv
 github_username:  sukumargv
